<resources>
    <string name="app_name">OpenFoodFacts</string>
    <string name="product_name">Sandwich Poulet Crudités</string>
    <string name="brand">Sodebo</string>
    <string name="barcode">Code barres : %1$s</string>
    <string name="quantity">Quantité : %1$s</string>
    <string name="sold">Vendu au : %1$s</string>
    <string name="ingredients">Ingrédients : %1$s</string>
    <string name="allergenes">Substances allergènes : %1$s</string>
    <string name="additives">Additifs : %1$s</string>
    <string name="nutrients_landmark">Repères nutritionnels 100g</string>
    <string name="nutrients_fats">%1$s g de matières grasses / lipides</string>
    <string name="nutrients_satured_fats">%1$s g d\'\acides gras saturés</string>
    <string name="nutrients_sugars">%1$s g de sucres</string>
    <string name="nutrients_salt">%1$s g de sel</string>

    <string name="nutriscore">Nutriscore : </string>
    <string name="kcal_part"> kCal/part</string>


    <string name="nutrients_low">en faible quantité</string>
    <string name="nutrients_moderate">en quantité modérée</string>
    <string name="nutrients_high">en quantité élevée</string>

    <string name="per_100g">Pour 100g</string>
    <string name="per_part">Par part</string>

    <string name="energy">Énergie</string>
    <string name="fats">Matières grasses</string>
    <string name="satured_fats">dont Acides gras saturées</string>
    <string name="glucids">Glucides</string>
    <string name="sugars">dont Sucres</string>
    <string name="fibers">Fibres alimentaires</string>
    <string name="proteins">Protéines</string>
    <string name="salt">Sel</string>
    <string name="sodium">Sodium</string>

    <string name="products_empty_scan_not_scanned_yet">Vous n\'avez rien encore scanné</string>
    <string name="products_empty_scan_info_button">Cliquez sur le bouton ci-dessous pour commencer.</string>
    <string name="products_empty_scan_button_title">scanner un produit</string>

    <string name="tab_fiche">Fiche</string>
    <string name="tab_nutrition">Nutrition</string>
    <string name="tab_tableau">Tableau</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>