<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="150dp"
    tools:context=".presentation.pages.ProductsEmptyScanActivity">
    <ImageView
        android:id="@+id/products_empty_scan_banner"
        android:contentDescription=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_empty_saved"
        android:layout_width="match_parent"
        android:layout_height="120dp" />
    <TextView
        android:id="@+id/products_empty_scan_not_scanned_yet"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/products_empty_scan_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products_empty_scan_not_scanned_yet"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/products_empty_scan_info_button"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/products_empty_scan_not_scanned_yet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products_empty_scan_info_button"
        android:textAlignment="center"
        android:textSize="14sp"
        />
    <Button
        android:elevation="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintTop_toBottomOf="@id/products_empty_scan_info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@drawable/elevated_rounded_button"
        android:text="@string/products_empty_scan_button_title"
        />


</androidx.constraintlayout.widget.ConstraintLayout>